--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	}
 
 #header {
-	background-color: #508484;
+	background-color: #4A4238;
 	position: absolute;
 	display: inline-block;
 	height: 12%;
