--- a/tools/style.css
+++ b/tools/style.css
@@ -10,14 +10,13 @@ body {
   background-color: #000;
 }
 
-
 body{
 margin:0;
 padding:0;
 color: #fff;
 text-align: center;
 display: table;
-background: url(../images/bg.jpg) right bottom no-repeat;
+background: url(../images/bg30.jpg) right bottom no-repeat;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
@@ -47,6 +46,7 @@ height: 100%;
 	/*padding: 100px 0 100px 0;*/
 	padding-top: 15%;
 	margin: auto;
+	padding-bottom: 5%;
 }
 
 h1{
@@ -101,9 +101,10 @@ h2 strong.sep-two{
 
 #footer{
 	width: 100%;
+	padding-top: 10%;
 }
 
-ul.social
+/*ul.social
 {
 width: 242px;
 margin: 80px auto 0;
@@ -158,7 +159,7 @@ width: 62px;
 
 ul.social li.youtube:hover{
 background-position: -180px -62px;
-}
+}*/
 
 
 @media screen and (max-width: 568px){
@@ -231,5 +232,5 @@ background-position: -180px -62px;
 	border-radius:4px;
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px;
-	border:1px solid #1A87B9
+	border:1px solid #1A87B9;
 }
