--- a/tools/style.css
+++ b/tools/style.css
@@ -101,7 +101,7 @@ h2 strong.sep-two{
 
 #footer{
 	width: 100%;
-	padding-top: 10%;
+	padding-top: 8%;
 }
 
 /*ul.social
@@ -168,6 +168,7 @@ background-position: -180px -62px;
 		/*padding: 30px 0 30px 0;*/
 		padding-top: 25%;
 		margin: auto;
+		padding-bottom: 0;
 	}
 
 
