--- a/tools/style.css
+++ b/tools/style.css
@@ -10,6 +10,7 @@ body {
   background-color: #000;
 }
 
+
 body{
 margin:0;
 padding:0;
@@ -92,7 +93,7 @@ h2 strong.sep-two{
 	font-size: 24px;
 	color: #000000;
 	line-height: 34px;
-	padding: 0 30%;
+	/*padding: 0 30%;*/
 }
 
 #middle p span{
