--- a/projects/fa/assets/css/main.css
+++ b/projects/fa/assets/css/main.css
@@ -94,9 +94,7 @@ body {
     padding: 7%;
 }
 
-.navbar-brand {
-    /*font-size: 1.5em;*/
-}
+
 
 .gallery {
     background: black;
@@ -119,6 +117,20 @@ body {
     margin-top: -5px;
     margin-left: -5px;
     margin-right: 5px;
+}
+
+.left {
+    text-align: left;
+}
+
+#footerwrap h3,
+#footerwrap p,
+#footerwrap span {
+    color: white;
+}
+
+#footerwrap h4 {
+    font-size: 15px;
 }
 
 
@@ -490,6 +502,7 @@ a:after {
     text-shadow: 2px 2px 2px #000;
 }
 
+#info,
 #greywrap {
 	background: #f5f5f5;
 	margin-top: 0px;
@@ -777,15 +790,16 @@ a:after {
 
 .blog-bg h4 {
 	/*color: #dadada;*/
-    color: dark grey;
-    /*color: black;*/
+    /*color: dark grey;*/
+    color:#2b2b2b;
 	padding-top: 0px;
     font-weight: 500;
 }
 
 .blog-bg h5 {
 	/*color: #dadada;*/
-    color: dark grey;
+    /*color: dark grey;*/
+    color: #2b2b2b;
 	font-size: 11px;
 }
 
@@ -819,4 +833,8 @@ a:after {
 		line-height: 38px;
 	}
 }
+
+
+
+
 
