--- a/projects/workouts/assets/css/main.css
+++ b/projects/workouts/assets/css/main.css
@@ -26,6 +26,7 @@ textarea {
 
 body {
     height: 100%;
+    /*background-color: #2b2b2b;*/
     font-size: 1em;
     line-height: 1.4;
     font-family: "Lato";
@@ -53,20 +54,24 @@ hr {
 
 .navbar {
     font-weight: 800;
-    background-color: #F2F2F2;
+    /*background-color: #F2F2F2;*/
+    background-color: white;
 }
 
 .navbar-toggle {
-    background-color: #2b2b2b;
+    /*background-color: #b2b2b2;*/
+    background-color: #3068A5;
     border-color: transparent;
     border: 0px solid transparent;
 }
 
 .navbar-inverse .navbar-header .navbar-brand {
-    color: #3068A5;
+    /*color: #3068A5;*/
+    color: #2b2b2b;
 } 
 .navbar-inverse .navbar-header .navbar-brand:hover {
     color: #2b2b2b;
+    color: #3068A5;
 } 
 
 .logo {
