--- a/projects/verticulture/assets/less/style.less
+++ b/projects/verticulture/assets/less/style.less
@@ -1,8 +1,12 @@
 //Google font Loader
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
+@font-face {
+    font-family: 'Lane';
+    src: url(assets/fonts/lane.narrow.ttf');
+}
 body{
 	background: #ffffff;
-	font-family: 'Open Sans', sans-serif;
+	font-family: ''Open Sans', sans-serif;'
 	font-weight: 300;
 	font-size: 14px;
 	line-height: 22px;
