--- a/projects/verticulture/assets/css/presets/custom-color.css
+++ b/projects/verticulture/assets/css/presets/custom-color.css
@@ -18,6 +18,7 @@ a:hover {
   border: 1px solid #103643;
   color: #103643;
 }
+.btn-border:active,
 .btn-border:hover {
   background: #103643;
   border: 1px solid #103643;
@@ -43,6 +44,7 @@ a:hover {
 }
 
 #header .main-navigation{
+	background-color: #fff;
 	border-bottom: 2px solid #496b5f;
 }
 #header .nav li a{
@@ -64,6 +66,9 @@ a:hover {
   	color: #AFD338;
 }
 /* Services color */
+#services {
+	background-color: #fff;
+}
 #services h1 {
 	color: #AFD338;
 }
@@ -75,16 +80,16 @@ a:hover {
 	border: 1px solid #103643;
 }
 #services .content{
+	color: #fff;
 	background: #103643;
 }
 #services .icon-wrapper i{
 	color: #496b5f;
 	border: 1px solid #103643;
 }
-#services .service-box:active i,
-#services .service-box:focus i,
 #services .service-box:hover i {
   background: #AFD338;
+  color: #fff;
 }
 
 /* About color */
