--- a/projects/verticulture/assets/css/style.css
+++ b/projects/verticulture/assets/css/style.css
@@ -36,9 +36,6 @@ a {
     -o-transition: all .3s ease;
     transition: all .3s ease
 }
-a:hover {
-    color: #fff
-}
 a:focus {
     outline: 0
 }
@@ -83,14 +80,14 @@ img {
     transition: all .3s ease
 }
 .btn-border {
-    border: 2px solid #496B5F;
-    color: #496B5F;
+    /*border: 2px solid #496B5F;
+    color: #496B5F;*/
     overflow: hidden;
     font-size: 16px;
     line-height: 22px;
     font-weight: 300
 }
-.btn-border:hover,
+/*.btn-border:hover,
 .btn-border:active {
     color: #fff;
     background: #496B5F
@@ -104,7 +101,7 @@ img {
 #header .main-navigation {
     background: #fff;
     border-bottom: 2px solid #496B5F
-}
+}*/
 #header .main-navigation .navbar-header a {
 	margin-bottom: 10px;
 }
@@ -208,18 +205,14 @@ img {
     margin-top: 30px
 }
 #services {
-    background: #fff;
     padding-bottom: 50px
 }
 #services .service-box {
     position: relative;
-    border: 1px solid #496B5F;
-    margin-bottom: 48px
+    margin-bottom: 48px;
 }
 #services .content {
-    color: #fff;
     text-align: center;
-    background: #496B5F;
     border: 4px solid #fff;
     padding: 10px 14px
 }
@@ -244,8 +237,6 @@ img {
 }
 #services .icon-wrapper i {
     background: #fff;
-    color: #496B5F;
-    border: 2px solid #496B5F;
     border-radius: 50%;
     font-size: 30px;
     height: 48px;
@@ -255,10 +246,6 @@ img {
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
     transition: all .5s ease
-}
-#services .service-box:hover i {
-    background: #496B5F;
-    color: #fff
 }
 #about {
     /*background: url(../img/background/4.jpg) center center no-repeat;*/
