--- a/projects/game/assets/css/main.css
+++ b/projects/game/assets/css/main.css
@@ -58,7 +58,7 @@ hr {
     text-align: center;
 }
 .color {
-    color: #3068A5;
+    color: #50DE7D;
 }
 .inline {
     float: left;
@@ -83,10 +83,10 @@ hr {
   color: white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  background: #3068A5;
+  background: #50DE7D;
   border: 0;
-  cursor: pointer;/*
-  -webkit-box-shadow: inset 0 -2px #2A5E96;
+  cursor: pointer;
+ /* -webkit-box-shadow: inset 0 -2px #2A5E96;
   box-shadow: inset 0 -2px #2A5E96;*/
 }
 .flat-button:active {
@@ -100,11 +100,12 @@ hr {
 .navbar {
     font-weight: 800;
     /*background-color: #F2F2F2;*/
-    background-color: #3068A5;
+    background-color: #50DE7D;
+    border-bottom: none;
 }
 .navbar-toggle {
     /*background-color: #b2b2b2;*/
-    background-color: #3068A5;
+    background-color: #50DE7D;
     border-color: transparent;
     border: 0px solid transparent;
 }
@@ -127,11 +128,16 @@ hr {
     padding-top: 50px;
     height: 100%;
 }
+.scoreboard {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  background-color: #fff;
+}
 
 #counter {
   font-size: 3em;
-  padding-top: 13%;
-  padding-bottom: 13%;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 .record {
