--- a/projects/verticulture/assets/css/style.css
+++ b/projects/verticulture/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
 @font-face {
     font-family: 'Lane'; /*a name to be used later*/
-    src: url('assets/fonts/lane.narrow.ttf'); /*URL to font*/
+    src: url('assets/fonts/lane.ttf'); /*URL to font*/
 }
 
 body {
