--- a/projects/game/assets/css/main.css
+++ b/projects/game/assets/css/main.css
@@ -63,14 +63,10 @@ hr {
 }
 .flat-button {
   position: relative;
-  vertical-align: top;
+  vertical-align: center;
   width: 40%;
   height: 60px;
-/*  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 8px;
-  margin-bottom: 8px;*/
-  font-size: 22px;
+  font-size: 23px;
   color: white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
@@ -83,6 +79,9 @@ hr {
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+.flat-button:focus {
+  outline: 0;
 }
 
 /*HEADER*/
