--- a/projects/game/assets/css/main.css
+++ b/projects/game/assets/css/main.css
@@ -185,14 +185,15 @@ hr {
   bottom: 85px;
   width: 100%;
   height: 60px;
+  text-align: center;
 }
 #copy {
   position: relative;
   width: 80%;
-  margin-left: 50%;
+  /*margin-left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);*/
 }
 .footer {
   position: fixed;
