--- a/projects/vcf/assets/css/presets/custom-color.css
+++ b/projects/vcf/assets/css/presets/custom-color.css
@@ -27,12 +27,6 @@ a:hover {
   border: 1px solid #103643;
   color: #AFD338;
 }
-/*.btn-common {
-  background: #496b5f;
-}
-.btn-common:hover {
-  background: #585858;
-}*/
 .section-title{
 	color: #AFD338;
 }
@@ -40,16 +34,12 @@ a:hover {
 	color: #103643;
 }
 /* Nav  */
-
 #header .navbar-collapse{
 	background-color: #fff;
-	/*border-top: 2px solid #496b5f;*/
 }
-
 #header .main-navigation{
 	background-color: #fff;
 	border-bottom: 1px solid #496b5f;
-	/*border-top: 2px solid #496b5f;*/
 }
 #header .nav li a{
 	color: #496b5f;
@@ -62,87 +52,24 @@ a:hover {
 }
 /* Intro color */
 #intro .main-text h1 span{
-	/*color: #947032;*/
 	color: #fff;
 }
 #intro .main-text h1 {
 	font-size: 5em;
   	color: #AFD338;
 }
-/* Services color */
-#services {
-	background-color: #fff;
-}
-/*#services h1 {
+/* Team color */
+#team > h1 {
 	color: #AFD338;
 }
-#services h1 span {
-	color: #103643;
-}*/
-
-#services .service-box{
-	border: 1px solid #103643;
-}
-#services .content{
+#team h1 span {
 	color: #fff;
-	background: #103643;
 }
-#services .icon-wrapper i{
-	color: #496b5f;
-	border: 1px solid #103643;
+#team .item .info h4 {
+	color: #fff;
 }
-#services .service-box:hover i {
-  background: #AFD338;
-  color: #fff;
-}
-/* About color */
-#about > h1 {
+#team .item .info p {
 	color: #AFD338;
-}
-#about h1 span {
-	color: #fff;
-}
-#about .item .info h4 {
-	color: #fff;
-}
-#about .item .info p {
-	color: #AFD338;
-}
-/* Portfolio color */
-#portfolio .portfolio-items .item-description{
-	background: #496b5f;
-	border-top: 3px solid #E13422;
-	border-bottom: 6px solid #D73626;
-}
-#portfolio .portfolio-items figure:hover h4,
-#portfolio .portfolio-items figure:hover p {
-  color: #496b5f;
-}
-
-#portfolio .portfolio-items figure:hover a.link-left,
-#portfolio .portfolio-items figure:hover a.link-right  {
-  color: #496b5f;
-}
-/* Pricing table color */
-#pricing .pricing-header{
-	background: #496b5f;
-}
-#pricing .price-value{
-	background: #496b5f;
-}
-#pricing .pricing-list{
-	color: #496b5f;
-}
-/* Blog color */
-#blog .blog-wrapper .content{
-	background: #496b5f;
-	border-top: 6px solid #E13422;
-}
-#blog .blog-wrapper .blog-footer{
-	background: #D73626;
-}
-#blog .carousel-control i{
-	background: #D73626;
 }
 /* Team color */
 #team .content .title{
@@ -150,23 +77,6 @@ a:hover {
 }
 #team .social-icons ul li a i{
 	color: #496b5f;
-}
-/* Testimonials color */
-#testimonial .testimonial{
-	border: 2px solid #496b5f;
-}
-#testimonial .testimonial-text i{
-	color: #496b5f;
-}
-#testimonial .testimonial-info{
-	background: #496b5f;
-	border-bottom: 6px solid #D73626;
-}
-#testimonial .testimonial-info img{
-	border: 4px solid #496b5f;
-}
-#testimonial .owl-theme .owl-controls .owl-page span{
-	background: #496b5f;
 }
 /* Contact color */
 #contact {
@@ -209,8 +119,12 @@ a:hover {
 #footer{
 	background: #fff;
 }
-.scroll-top i:hover{
+.scroll-top i{
 	color: #AFD338;
+}
+.scroll-top:hover {
+	background-color: #AFD338;
+	color: #103643;
 }
 #panel-opener{
 	color: #496b5f;
