--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -1,4 +1,11 @@
 
+/*Color Scheme:
+Main - 10364-3 (dark blue color of original banner)
+Primary Accent - AFD33-8 (green color of dot in banner)
+Secondary Accent - 496B5-F (green blue color of original logo)
+*/
+
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
 @font-face {
     font-family: 'Lane'; /*a name to be used later*/
@@ -31,25 +38,76 @@ body hr {
 }
 a {
     text-decoration: none;
+    color: #496b5f;
 }
 a {
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
     -ms-transition: all .3s ease;
     -o-transition: all .3s ease;
-    transition: all .3s ease
+    transition: all .3s ease;
+}
+a:hover {
+  color: #496b5f;
 }
 a:focus {
-    outline: 0
+    outline: 0;
 }
 img {
-    max-width: 100%
+    max-width: 100%;
+}
+::selection {   /* Safari/Chrome */
+    background: #AFD338;
+    color: #fff;
+}
+::-moz-selection {  /* Firefox */
+    background: #AFD338;
+    color: #fff;
+}
+.btn {
+    cursor: pointer;
+    padding: 10px 16px;
+    display: inline-block;
+    margin: 10px 20px;
+    outline: 0;
+    position: relative;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+}
+.btn-border {
+    overflow: hidden;
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 300;
+}
+.btn-border {
+  background: #AFD338;
+  border: 1px solid #103643;
+  color: #103643;
+}
+.btn-border:active,
+.btn-border:hover {
+  background: #103643;
+  border: 1px solid #103643;
+  color: #AFD338;
 }
 .row {
-    padding-bottom: 70px
+    padding-bottom: 70px;
 }
 .center {
     text-align: center;
+}
+.section-title {
+    text-align: center;
+    text-transform: uppercase;
+    padding: 48px 20px 20px 20px;
+    font-size: 50px;
+    font-weight: 700;
+    color: #AFD338;
+}
+.section-title span {
+    color: #103643;
 }
 .divider {
     width: 100%;
@@ -64,40 +122,9 @@ img {
 #divider3 {
     background: url(../img/background/3.jpg) center center no-repeat;
 }
-.section-title {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 50px;
-    font-weight: 700;
-    padding: 48px 20px 20px 20px;
-}
-.section-title span {
-
-}
-::selection {
-    background: #496B5F;
-    color: #fff;
-}
-::-moz-selection {
-    background: #496B5F;
-    color: #fff
-}
-.btn {
-    cursor: pointer;
-    padding: 10px 16px;
-    display: inline-block;
-    margin: 10px 20px;
-    outline: 0;
-    position: relative;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    transition: all .3s ease
-}
-.btn-border {
-    overflow: hidden;
-    font-size: 16px;
-    line-height: 22px;
-    font-weight: 300
+#header .main-navigation{
+    background-color: #fff;
+    border-bottom: 1px solid #496b5f;
 }
 #header .main-navigation .navbar-header a {
     margin-bottom: 10px;
@@ -108,19 +135,22 @@ img {
     float: left;
     height: 30px; //adjusted so logo/banner and navbar toggle fit on same line
 }
+#header .navbar-collapse{
+    background-color: #fff;
+}
 #header .nav {
     list-style: none;
-    margin-top: 16px
+    margin-top: 16px;
 }
 #header .nav li {
-    margin: 0 0 0 24px
+    margin: 0 0 0 24px;
 }
 #header .nav li a {
     text-transform: uppercase;
     padding: 5px 0;
     color: #496B5F;
     font-weight: 300;
-    position: relative
+    position: relative;
 }
 #header .nav li a:after {
     position: absolute;
@@ -135,19 +165,19 @@ img {
     transition: opacity .3s, transform .3s;
     -webkit-transform: translateY(10px);
     -moz-transform: translateY(10px);
-    transform: translateY(10px)
+    transform: translateY(10px);
 }
 #header .nav li.active a:after,
 #header .nav li.active a,
 #header .nav li a:hover::after,
 #header .nav li a:hover,
 #header .nav li a:focus {
+    color: #AFD338;
     background: 0 0;
     opacity: 1;
-    color: #496B5F;
     -webkit-transform: translateY(0px);
     -moz-transform: translateY(0px);
-    transform: translateY(0px)
+    transform: translateY(0px);
 }
 #header .affix {
     -webkit-animation-duration: 1s;
@@ -155,16 +185,16 @@ img {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
     -webkit-animation-name: fadeInDown;
-    animation-name: fadeInDown
+    animation-name: fadeInDown;
 }
 #header .affix .navbar-brand {
-    padding: 12px
+    padding: 12px;
 }
 #header .affix .navbar-brand img {
-    width: 80%
+    width: 80%;
 }
 #header .affix .nav {
-    margin-top: 10px
+    margin-top: 10px;
 }
 #intro {
     background: url(../img/background/2.jpg) center center no-repeat;
@@ -184,46 +214,60 @@ img {
 }
 #intro .main-text h1 {
     font-weight: 700;
-    font-size: 62px;
+    font-size: 5em;
+    color: #AFD338;
 }
 #intro .main-text h1 span {
     font-family: 'Lane';
+    color: #fff;
 
 }
 #intro .main-text h2 {
     color: #fff;
     font-size: 30px;
     font-weight: 300;
-    line-height: 28px
+    line-height: 28px;
 }
 #intro .main-text .btn {
     font-size: 20px;
     padding: 12px 30px;
-    margin-top: 30px
+    margin-top: 30px;
 }
 #team {
     background-color: #103643;
     text-align: center;
     color: #fff;
-    overflow: hidden
+    overflow: hidden;
+}
+#team > h1 {
+    color: #AFD338;
+}
+#team h1 span {
+    color: #fff;
 }
 #team .side-left {
-    text-align: center
+    text-align: center;
 }
 #team .side-left img {
     border-radius: 4px;
-    padding-bottom: 12px
+    padding-bottom: 12px;
+}
+#team .item .info h4 {
+    color: #fff;
+}
+#team .item .info p {
+    color: #AFD338;
 }
 #team .side-left .info h4 {
     font-size: 22px;
     font-weight: 300;
-    line-height: 12px
+    line-height: 12px;
 }
 #team .side-left .info p {
     font-weight: 300;
     font-size: 14px;
     letter-spacing: 1.1px;
-    position: relative
+    position: relative;
 }
 #team .side-left .info p:after {
     background: #fff;
@@ -232,7 +276,7 @@ img {
     left: 32%;
     position: absolute;
     top: 125%;
-    width: 34%
+    width: 34%;
 }
 #team .side-right p {
 	color: #fff;
@@ -243,66 +287,66 @@ img {
 }
 #team .owl-theme .owl-controls .owl-page span {
     background: 0 0;
-    display: none
+    display: none;
 }
 #team .item-square {
-    margin-bottom: 42px
+    margin-bottom: 42px;
 }
 #team .item-square .face {
     position: relative;
     overflow: hidden;
     margin: 0 auto;
-    cursor: pointer
+    cursor: pointer;
 }
 #team .item-square .face .overlay {
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 10
+    z-index: 10;
 }
 #team .content {
     width: 100%;
     background-color: #181818;
-    overflow: hidden
+    overflow: hidden;
 }
 #team .content .title {
     background-color: #496B5F;
     width: 100%;
-    padding: 10px 0
+    padding: 10px 0;
 }
 #team .content .title h3 {
     font-size: 34px;
     font-weight: 300;
-    line-height: 22px
+    line-height: 22px;
 }
 #team .content .title p {
     font-size: 16px;
     font-weight: 300;
     line-height: 40px;
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 #team .content .text {
-    padding: 26px 24px
+    padding: 26px 24px;
 }
 #team .content .text p {
     font-weight: 300;
-    line-height: 22px
+    line-height: 22px;
 }
 #team .social-icons {
     background-color: #323232;
     width: 100%;
-    height: 48px
+    height: 48px;
 }
 #team .social-icons ul {
     margin: 5px;
-    padding: 0
+    padding: 0;
 }
 #team .social-icons ul li {
-    display: inline-block
+    display: inline-block;
 }
 #team .social-icons ul li a {
-    text-decoration: none
+    text-decoration: none;
 }
 #team .social-icons ul li a i {
     display: block;
@@ -311,7 +355,7 @@ img {
     width: 48px;
     text-align: center;
     height: 48px;
-    line-height: 48px
+    line-height: 48px;
 }
 #team .social-icons ul li a i:hover {
     -webkit-transition: all .2s linear;
@@ -319,33 +363,40 @@ img {
     -o-transition: all .2s linear;
     -ms-transition: all .2s linear;
     transition: all .2s linear;
-    color: #fff
+    color: #fff;
 }
 #team .social-icons .fa-twitter:hover {
-    background: #00aced
+    background: #00aced;
 }
 #team .social-icons .fa-facebook:hover {
-    background: #3b5998
+    background: #3b5998;
 }
 #team .social-icons .fa-google-plus:hover {
-    background: #dd4b39
+    background: #dd4b39;
 }
 #team .social-icons .fa-youtube:hover {
-    background: #CC181E
+    background: #CC181E;
+}
+#contact {
+    background: #fff;
+}
+#contact-title,
+#contact .overlay h1 .section-title .span {
+    color: #103643;
 }
 #contact .contact-form .controls {
-    padding-bottom: 20px
+    padding-bottom: 20px;
 }
 #contact .contact-form .controls input.contact_input {
     color: #000;
     background-color: #fff;
     float: left;
-    border: 1px solid #496B5F;
+    border: 1px solid #103643;
     font-size: 14px;
     font-weight: 300;
     height: 48px;
     padding: 0 12px;
-    width: 88%
+    width: 88%;
 }
 #contact .contact-form .controls i {
     font-size: 18px;
@@ -356,47 +407,62 @@ img {
     padding: 12px;
     text-align: center;
     border: 1px solid #496B5F;
-    border-left: 0
+    border-left: 0;
 }
 #contact .contact-form textarea {
     font-size: 14px;
     background-color: #fff;
-    border: 1px solid #496B5F;
+    border: 1px solid #103643;
     width: 100%;
     padding: 2% 3%;
     height: 185px;
-    border-radius: 0
+    border-radius: 0;
 }
 #contact .contact-form textarea:focus {
     box-shadow: none
 }
 #contact .contact-form .btn {
-    color: #fff;    font-weight: 300;
+    color: #103643;    
+    font-weight: 300;
     margin-top: 30px;
     font-size: 24px;
     width: 100%;
-    margin: 20px 0
+    margin: 20px 0;
+    border: 1px solid #103643;
+    background: #AFD338;
+}
+#contact .contact-form .btn:hover,
+#contact .contact-form .btn:hover {
+  background: #103643;
+  border: 1px solid #103643;
+  color: #AFD338;
 }
 #connected {
-    background-color: #496B5F;
+    background-color: #103643;
     width: 100%;
     color: #fff;
-    text-align: center
+    text-align: center;
+}
+#connected > h1 {
+    color: #AFD338;
+}
+#connected h1 span {
+    color: #fff;
 }
 #connected hr {
     width: 200px;
-    text-align: center
+    text-align: center;
 }
 #connected .contact-item {
-    margin-top: 48px
+    margin-top: 48px;
 }
 #connected .contact-item a {
-    padding-bottom: 12px
+    padding-bottom: 12px;
 }
 #connected .contact-item a i {
     font-size: 30px;
     color: #fff;
-    padding-bottom: 16px
+    padding-bottom: 16px;
 }
 #connected .contact-item h5 {
     color: #FDF2F0;
@@ -407,7 +473,7 @@ img {
 #connected .contact-item h4 {
     font-size: 18px;
     font-weight: 700;
-    letter-spacing: 1px
+    letter-spacing: 1px;
 }
 #connected .contact-item i:focus,
 #connected .contact-item i:active,
@@ -416,14 +482,15 @@ img {
     
 }
 #footer {
-    background-color: #496B5F;
+    background-color: #fff;
     width: 100%;
     height: 28px;
 }
 .scroll-top {
     right: 30px;
     bottom: 30px;
-    background: #000;
+    background: #fff;
+    border: 1px solid #103643;
     border-radius: 4px;
     width: 45px;
     height: 45px;
@@ -432,96 +499,16 @@ img {
     z-index: 9999;
     -webkit-transition: all .2s linear;
     -moz-transition: all .2s linear;
-    transition: all .2s linear
+    transition: all .2s linear;
+}
+.scroll-top:hover {
+    background-color:  #103643;
 }
 .scroll-top i {
     padding: 0 10px;
     font-size: 36px;
-    color: #fff
+    color: #103643;
 }
 .scroll-top i:hover {
-    color: #496B5F
+    color:  #fff;
 }
-#settings-panel {
-    position: fixed;
-    top: 172px;
-    right: -158px;
-    border-right: 0;
-    background: #fff;
-    padding: 10px;
-    text-align: center;
-    z-index: 99
-}
-#panel-opener {
-    position: absolute;
-    font-size: 1.4em;
-    line-height: 1.6em;
-    top: 10px;
-    left: -40px;
-    background: #fff;
-    width: 40px;
-    height: 40px;
-    color: #496B5F;
-    line-height: 40px;
-    cursor: pointer
-}
-#panel-opener:hover {
-    color: #1a88c4
-}
-.color-container {
-    width: 138px;
-    margin-bottom: -8px;
-    float: left
-}
-.color-container .color {
-    width: 40px;
-    height: 40px;
-    display: inline-block;
-    margin: 0 4px 0 0
-}
-.color-container .color-1 {
-    background: #496B5F
-}
-.color-container .color-2 {
-    background: #3498db
-}
-.color-container .color-3 {
-    background: #e74c3c
-}
-.color-container .color-4 {
-    background: #34495e
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
