--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -1,16 +1,11 @@
-
-/*Color Scheme:
+/*
+Color Scheme
 Main - 10364-3 (dark blue color of original banner)
 Primary Accent - AFD33-8 (green color of dot in banner)
 Secondary Accent - 496B5-F (green blue color of original logo)
 */
 
-
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
-@font-face {
-    font-family: 'Lane'; /*a name to be used later*/
-    src: url('assets/fonts/lane.ttf'); /*URL to font*/
-}
 
 body {
     background: #fff;
@@ -187,7 +182,7 @@ img {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
 }
-#header .affix .navbar-brand {
+/*#header .affix .navbar-brand {
     padding: 12px;
 }
 #header .affix .navbar-brand img {
@@ -195,7 +190,7 @@ img {
 }
 #header .affix .nav {
     margin-top: 10px;
-}
+}*/
 #intro {
     background: url(../img/background/2.jpg) center center no-repeat;
     background-size: cover;
@@ -272,7 +267,7 @@ img {
 #team .side-left .info p:after {
     background: #fff;
     content: "";
-    height: 5px;
+    height: 1px;
     left: 32%;
     position: absolute;
     top: 125%;
@@ -288,94 +283,6 @@ img {
 #team .owl-theme .owl-controls .owl-page span {
     background: 0 0;
     display: none;
-}
-#team .item-square {
-    margin-bottom: 42px;
-}
-#team .item-square .face {
-    position: relative;
-    overflow: hidden;
-    margin: 0 auto;
-    cursor: pointer;
-}
-#team .item-square .face .overlay {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-}
-#team .content {
-    width: 100%;
-    background-color: #181818;
-    overflow: hidden;
-}
-#team .content .title {
-    background-color: #496B5F;
-    width: 100%;
-    padding: 10px 0;
-}
-#team .content .title h3 {
-    font-size: 34px;
-    font-weight: 300;
-    line-height: 22px;
-}
-#team .content .title p {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 40px;
-    text-transform: uppercase;
-}
-#team .content .text {
-    padding: 26px 24px;
-}
-#team .content .text p {
-    font-weight: 300;
-    line-height: 22px;
-}
-#team .social-icons {
-    background-color: #323232;
-    width: 100%;
-    height: 48px;
-}
-#team .social-icons ul {
-    margin: 5px;
-    padding: 0;
-}
-#team .social-icons ul li {
-    display: inline-block;
-}
-#team .social-icons ul li a {
-    text-decoration: none;
-}
-#team .social-icons ul li a i {
-    display: block;
-    font-size: 18px;
-    color: #496B5F;
-    width: 48px;
-    text-align: center;
-    height: 48px;
-    line-height: 48px;
-}
-#team .social-icons ul li a i:hover {
-    -webkit-transition: all .2s linear;
-    -moz-transition: all .2s linear;
-    -o-transition: all .2s linear;
-    -ms-transition: all .2s linear;
-    transition: all .2s linear;
-    color: #fff;
-}
-#team .social-icons .fa-twitter:hover {
-    background: #00aced;
-}
-#team .social-icons .fa-facebook:hover {
-    background: #3b5998;
-}
-#team .social-icons .fa-google-plus:hover {
-    background: #dd4b39;
-}
-#team .social-icons .fa-youtube:hover {
-    background: #CC181E;
 }
 #contact {
     background: #fff;
@@ -479,7 +386,6 @@ img {
 #connected .contact-item i:active,
 #connected .contact-item i:hover {
     color: #AFD338;
-    
 }
 #footer {
     background-color: #fff;
@@ -503,6 +409,7 @@ img {
 }
 .scroll-top:hover {
     background-color:  #103643;
+    border: 1px solid #fff;
 }
 .scroll-top i {
     padding: 0 10px;
