--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -26,6 +26,10 @@ h5,
 h6 {
     font-weight: 700;
 }
+h3 {
+    color: #103643;
+    padding: 0;
+}
 body hr {
     height: 1px;
     border: none;
