--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -5,9 +5,11 @@ Primary Accent - AFD33-8 (green color of dot in banner)
 Secondary Accent - 496B5-F (green blue color of original logo)
 */
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic);
 
 body {
+    width: 100%;
+    height: auto;
     background: #fff;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
