--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -116,13 +116,13 @@ img {
 .divider {
     max-width: 100vw;
     height: 50vh;
-    /*padding: 0;
-    margin: 0;*/
-    /*overflow: hidden;*/
 }
 #divider1 {
-    background: url(../img/background/4.jpg) center center no-repeat  fixed;
-    /*background-image: url(../img/background/4.jpg);*/
+    background: url(../img/background/4.jpg) center center no-repeat fixed;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
@@ -130,6 +130,10 @@ img {
 }
 #divider2 {
     background: url(../img/background/1.jpg) center center no-repeat fixed;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
@@ -137,6 +141,10 @@ img {
 }
 #divider3 {
     background: url(../img/background/3.jpg) center center no-repeat fixed;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
@@ -219,6 +227,13 @@ img {
 }*/
 #intro {
     background: url(../img/background/2.jpg) center center no-repeat;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover;
     background-size: cover;
     color: #fff;
     /*width: 100vw;*/
