--- a/projects/vertfarms/assets/css/style.css
+++ b/projects/vertfarms/assets/css/style.css
@@ -18,10 +18,6 @@ body {
     font-weight: 300;
     font-size: 17px;
     line-height: 22px;
-    /*-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;*/
-    /*overflow-x: hidden;*/
 }
 h1,
 h2,
@@ -114,22 +110,49 @@ img {
     color: #103643;
 }
 .divider {
-    max-width: 100vw;
-    height: 50vh;
-}
-#divider1 {
-    background: url(../img/background/4.jpg) center center no-repeat fixed;
-    -webkit-background-size: 100%; 
+    /*max-width: 100vw;
+    height: 50vh;*/
+    max-width: 100%;
+    height: 450px;
+    /*overflow: hidden;*/
+    /*position: fixed;*/
+    /*background-attachment: fixed;*/
+    /*-webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
     background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
+    background-size: cover;*/
+}
+
+#divider1 {
+    /*background-position: 100% 100%;*/
+    background: center center;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(../img/background/4.gif); 
+    background-image: url(../img/background/4.gif); 
+    /*background-position: center center;*/
+    background-attachment: fixed;
+    /*-webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
+    -webkit-background-size: cover; 
+    -moz-background-size: cover; 
+    -o-background-size: cover; */
+    /*z-index: -1;*/
+}
+.gt-ie8  #divider1 {
+    background-attachment: scroll;
 }
 #divider2 {
-    background: url(../img/background/1.jpg) center center no-repeat fixed;
+    background: url(../img/background/1.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
     -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
@@ -140,7 +163,10 @@ img {
     background-size: cover;
 }
 #divider3 {
-    background: url(../img/background/3.jpg) center center no-repeat fixed;
+    background: url(../img/background/3.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
@@ -216,7 +242,7 @@ img {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
 }
-/*#header .affix .navbar-brand {
+#header .affix .navbar-brand {
     padding: 12px;
 }
 #header .affix .navbar-brand img {
@@ -224,7 +250,7 @@ img {
 }
 #header .affix .nav {
     margin-top: 10px;
-}*/
+}
 #intro {
     background: url(../img/background/2.jpg) center center no-repeat;
     -webkit-background-size: 100%; 
@@ -236,7 +262,6 @@ img {
     -o-background-size: cover;
     background-size: cover;
     color: #fff;
-    /*width: 100vw;*/
     max-width: 100vw;
     text-align: center;
     padding-top: 18vh;
@@ -246,7 +271,6 @@ img {
 #intro .overlay {
     background: url(../img/background/bg-overlay.png) rgba(0, 0, 0, .6) repeat;
     max-width: 100vw;
-    /*overflow: hidden;*/
 }
 #intro .main-text {
     padding: 0 20px;
@@ -318,7 +342,7 @@ img {
     width: 34%;
 }
 #team .side-right p {
-    color: #fff;
+	color: #fff;
     padding: 0 20px;
     font-weight: 300;
     font-size: 16px;
