--- a/projects/vertfarms/assets/css/style.css
+++ b/projects/vertfarms/assets/css/style.css
@@ -135,14 +135,13 @@ img {
     background-attachment: fixed;
     background-size: 100%;
     max-width: 100vw;
-    /*-webkit-background-size: 100%; 
+    -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
     background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
-    -o-background-size: cover; */
-    /*z-index: -1;*/
+    -o-background-size: cover; 
 }
 #divider2 {
     background: url(../img/background/1.jpg);
@@ -153,21 +152,21 @@ img {
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
     max-width: 100vw;
-    /*background-size: 100%; 
+    background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
-    background-size: cover;*/
+    background-size: cover;
 }
 #divider3 {
     background: url(../img/background/3.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    /*-webkit-background-size: 100%; 
+    -webkit-background-size: 100%; 
     -moz-background-size: 100%; 
     -o-background-size: 100%; 
-    background-size: 100%; */
+    background-size: 100%; 
     -webkit-background-size: cover; 
     -moz-background-size: cover; 
     -o-background-size: cover; 
