--- a/projects/fa/assets/css/main.css
+++ b/projects/fa/assets/css/main.css
@@ -54,9 +54,6 @@ img {
 .header-img {
     padding: 7%;
 }
-.gallery {
-    background: #000;
-}
 .button {
     background-color: #74CFAE;
     color: white;
@@ -76,12 +73,21 @@ img {
     line-height: 28px;
     margin-bottom: 25px;
 }
-#footerwrap h3,
-#footerwrap p,
-#footerwrap span {
+#footer {
+    background: #2b2b2b;
+    margin-top: 0px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+}
+#footer h3,
+#footer p,
+#footer span {
     color: white;
 }
-#footerwrap h4 {
+#footer h4 {
+    color: white;
     font-size: 15px;
 }
 .white-bg {
@@ -159,10 +165,11 @@ img {
 }
 table {
     width:100%;
-}
-table, th, td {
-    border: 0px solid #333;
     border-collapse: collapse;
+    border-bottom: 4px solid #eee;
+}
+th, td {
+    border: 0px solid #333;
 }
 th, td {
     padding: 5px;
@@ -215,6 +222,9 @@ body {
 .modal-footer {
     background: #74CFAE;
 }
+.modal-body .p {
+    /*margin-bottom: 10px;*/
+}
 .navbar-toggle {
     border-color: transparent;
     border: 0px solid transparent;
@@ -224,6 +234,15 @@ body {
 	background-color: #16a085;
 	color: black;
 }
+/*.navbar-main .navbar-inverse .navbar-collapse .navbar-nav li:hover,
+.navbar-main .navbar-inverse .navbar-collapse .nav li:hover {
+    color: #74CFAE;
+}
+.navbar-nav > li > a:hover, 
+.navbar-nav > li > a:focus {
+    background-color: #FFFF00;
+    color: #FFC0CB;
+}*/
 hr {
     position: relative;
     border: none;
@@ -282,25 +301,23 @@ a:after {
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
-#yup {
-    position: relative;
-}
-#abc {
+#header-wrap {
     margin-top: -50px;
     padding-top: 100px;
     min-height: 650px;
     width: 100vw;
 }
-#headerwrap {
+
+#header {
     height: 100%;
     width: 100%;
     position: fixed;
-	background-color: #74CFAE;
-	text-align:center;
+    background-color: #74CFAE;
+    text-align:center;
     z-index: -1;
 }
-#headerwrap p {
-	color:#ffffff;
+#header p {
+	color:#fff;
 	font-size: 40px;
 	font-weight: 400;
 	text-align: center;
@@ -309,38 +326,31 @@ a:after {
 	margin-left: 15px;
     text-shadow: 2px 2px 2px #000;
 }
-#info,
-#greywrap {
+#why {
+    background-color: #fff;
+    margin-top: 0px;
+    padding-top: 40px;
+    text-align: center;
+}
+#why p {
+    margin-left: 30px;
+    margin-right: 30px;
+    letter-spacing: 1px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+#calender {
     background-color: #fff;
 	margin-top: 0px;
 	padding-top: 40px;
 	text-align: center;
 }
-#greywrap .callout {
-	margin-bottom: 20px;
-}
-#greywrap p {
+#calender p {
 	margin-left: 30px;
 	margin-right: 30px;
 	letter-spacing: 1px;
 	padding-top: 15px;
 	padding-bottom: 15px;
-}
-#greywrap .icon {
-	font-size: 60px;
-	line-height: 30px;
-	margin-bottom: 10px;
-}
-#footerwrap {
-	background: #2b2b2b;
-	margin-top: 0px;
-	padding-top: 40px;
-	padding-bottom: 20px;
-	border-bottom: 1px solid #ddd;
-	text-align: center;
-}
-#footerwrap h4 {
-	color: white;
 }
 /* ==========================================================================
    Image Mask
@@ -408,26 +418,29 @@ a:after {
 	transition: transform 0.4s, opacity 0.1s;
 }
 /* ==========================================================================
-   Blog Section
+   About Section
    ========================================================================== */
-#blog {
+#about {
     background-color: #fff;
     width: 100%;
 }
-.blog-bg {
+.about-bg {
     background-color: #74CFAE;
     padding: 0;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-.blog-bg h4 {
+.about-bg h4 {
     color:#2b2b2b;
 	padding-top: 0px;
     font-weight: 500;
 }
-.blog-bg h5 {
+.about-bg h5 {
     color: #2b2b2b;
 	font-size: 11px;
 }
-.blog-content {
+.about-content {
 	padding-top: 10px;
     padding-left: 35px;
     padding-right: 21px;
@@ -447,7 +460,7 @@ a:after {
    ========================================================================== */
 
 /* ----------- Non-Retina Screens ----------- */
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
     .mask figcaption {
         opacity: 0;
         -webkit-transform: translateY(100%);
@@ -462,27 +475,21 @@ a:after {
         font-size: 16px;
         margin-bottom: 18px;
     }
+    
 }
 
-/* ----------- Retina Screens ----------- */
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) { 
-    .mask figcaption {
-        opacity: 0;
-        -webkit-transform: translateY(100%);
-        -moz-transform: translateY(100%);
-        -ms-transform: translateY(100%);
-        transform: translateY(100%);
-        -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
-        -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
-        transition: transform 0.4s, opacity 0.1s 0.3s;
+@media screen and (min-device-width:1350px){
+    .about-bg {
+        padding-top: 10px;
+        padding-right: 10px;
     }
 }
 
-
 @media screen and (max-width:1050px), screen and (max-device-width:1050px){
-	
+    
     
 }
+
 
 /*ipad portrait*/
 @media only screen and (min-device-width:768px) and (max-device-width : 1024px) and (orientation : portrait){
@@ -490,20 +497,42 @@ a:after {
     
 }
 
-@media screen and (max-width:769px) {
-	#headerwrap p {
-		font-size: 22px;
-		line-height: 25px;
-	}
-    #headerwrap .header-img span img {
+@media screen and (max-width:320px) {
+    #header p {
+        font-size: 22px;
+        line-height: 25px;
+    }
+    #header .header-img span img {
         width: 65px;
         height: auto;
     }
-    .gallery2 {
-        margin-top: -43px;
-    } 
     #calender-frame {
         width: 100%; 
         height: 350px;
+    }
+    .about-bg {
+    padding: 0;
+    }
+}
+
+/*@media screen and (min-width:769px) {*/
+@media screen and (min-width:321px) and (max-device-width : 769px) {
+	#header p {
+		font-size: 22px;
+		line-height: 25px;
+	}
+    #header .header-img span img {
+        width: 65px;
+        height: auto;
+    }
+    #calender-frame {
+        width: 100%; 
+        height: 350px;
+    }
+    .about-bg {
+    padding: 0;
+    }
+    #header {
+        padding-top: 30px;
     }
 }
