added shuffle function

--- a/projects/vcf/assets/css/style.css
+++ b/projects/vcf/assets/css/style.css
@@ -1,4 +1,9 @@
 /*
+ * Author: Hanni Abu
+ * URL: http://hanniabu.com
+ */
+
+/*
 Color Scheme
 Main - 10364-3 (dark blue color of original banner)
 Primary Accent - AFD33-8 (green color of dot in banner)
